balance issue solved

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
       rel="stylesheet"
     />
     <title>ethereum-boilerplate</title>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
