--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,28 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyDqYPqs7l98M5dZCGRxoeGpjPx4fxLDzQc",
+    authDomain: "horse-racing-game-d573d.firebaseapp.com",
+    projectId: "horse-racing-game-d573d",
+    storageBucket: "horse-racing-game-d573d.appspot.com",
+    messagingSenderId: "492163034259",
+    appId: "1:492163034259:web:56f4e55d96559ab0453166",
+    measurementId: "G-8DTCG5YV4F"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
   </body>
 </html>
